--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,8 @@ cmake_minimum_required(VERSION 2.8)
 project( BokehCamera )
 find_package(OpenCV REQUIRED)
 find_package(realsense2 REQUIRED)
-set(CMAKE_CXX_STANDARD 11)
+find_package(Threads REQUIRED)
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
 
 if(NOT CMAKE_BUILD_TYPE)
@@ -15,4 +16,4 @@ set(CMAKE_CXX_FLAGS_RELEASE "-O3")
 
 include_directories( ${OpenCV_INCLUDE_DIRS} )
 add_executable( BokehCamera BokehCamera.cpp )
-target_link_libraries( BokehCamera ${OpenCV_LIBS} ${realsense2_LIBRARY})
+target_link_libraries( BokehCamera ${OpenCV_LIBS} ${realsense2_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
